<resources>
    <string name="app_name">Test apps</string>

    <string name="default_time">00:00:00</string>

    <string name="start">Run timer</string>
    <string name="preference">Preference</string>
    <string name="stop">Stop timer</string>

    <string name="timer">Timer</string>
    <string name="chat">Chat</string>
    <string name="movies">Movies</string>
    <string name="taxi">Taxi</string>
    <string name="splash">Splash</string>
    <string name="camera">Camera</string>

    <string name="pref_sound">Is sound enable</string>
    <string name="pref_text">Is some text</string>
    <string name="some_img">Is some image</string>
    <string name="background">Main background</string>

    <string name="item_3">Item 3</string>

    <string name="tvProductName">Наименование продукта</string>
    <string name="swcTheame">Тема</string>
    <string name="bgText">Просто текст для теста</string>

    <string name="move_title">Название фильма</string>
    <string name="move_year">Год</string>
    <string name="move_imdbid">imdbId</string>
    <string name="user_photo">user photo</string>
    <string name="video_stream">video_stream</string>
    <string name="send">Send</string>
    <string name="location">Location</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>