<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:orientation="vertical">

    <Button
        android:id="@+id/bttnTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timer"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/bttnChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat"
        android:textAlignment="center" />

    <Button
        android:id="@+id/bttnMovies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movies"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/bttnCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textAlignment="center" />

</LinearLayout>